# translatey-thingy

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs
src/commands/: translate.rs
