[package]
name = "translatey-thingy"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5.6"
dotenvy = "0.15.7"
tokio = { version = "1.33.0", features = ["full"] }
google_translator = "0.2.3"

[dependencies.serenity]
default-features = false
version = "0.11.6"
features = ["gateway", "builder", "model", "rustls_backend", "cache"]
